manifests/04-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: kubernetes-brief
spec:
  type: ClusterIP
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
