manifests/06-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: kubernetes-brief
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - port: 8000
      targetPort: 8000
